--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,28 @@ body {
     height: 100vh;
     display: grid;
     grid-template: 50px 1fr / 1fr;
+    overflow-y: scroll;
 }
 
 header {
+    display: flex;
     width: 100vw;
+    background-color: var(--color-black);
+}
+
+header .iconoCarrito {
+    height: 100%;
+    width: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    font-size: 2rem;
+    color: var(--color-white);
+}
+
+.iconoCarrito sup {
+    font-size: 1rem;
 }
 
 header ul {
@@ -32,7 +50,7 @@ header ul {
     overflow: hidden;
     overflow-x: scroll;
     padding-inline: 20px;
-    background-color: var(--color-blue);
+
 
 }
 
@@ -49,16 +67,86 @@ header ul li a {
 }
 
 main {
+    top: 50px;
     padding: 10px;
     display: grid;
     place-content: center;
-    grid-template: repeat(10, 600px) / 95%;
-    gap: 50px;
+    grid-template: repeat(10, 1fr) / 85%;
+    gap: 40px;
 
 }
+
+/* Producto Galeria */
 
 .producto {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color: red;
+    background-color: var(--color-black);
+    color: var(--color-white);
+    padding: 15px;
+    gap: 15px;
+}
+
+.producto .galeria {
+    display: grid;
+    grid-template: repeat(4, 1fr) / repeat(4, 1fr);
+}
+
+.galeria {
+    height: 100%;
+    gap: 15px;
+}
+
+.galeria :last-child {
+    background-color: var(--color-blue);
+    grid-area: 1 / 2 / 5 / 5;
+}
+
+.imagen {
+    background-color: white;
+}
+
+/* Producto Descripcion */
+
+.producto .descripcion {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.producto .descripcion h2 {
+    font-size: 3rem;
+}
+
+.producto .descripcion .descripcionStars {
+    font-size: 2rem;
+    margin-bottom: 50px;
+}
+
+.producto .descripcion precio {
+    width: 40%;
+    margin-top: 60px;
+    font-size: 2.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+
+.producto .descripcion small {
+    
+    font-size: 1.5rem;
+}
+
+.producto a {
+    margin-top: 30px;
+}
+
+.producto a, .producto button {
+    font-size: 1.5rem;
+    font-weight: bold;
+    width: 180px;
+    height: 50px;
+    background-color: var(--color-blue);
+    border: 0;
+    color: var(--color-white);
 }
